# CXX17-Tests

./: CMakeLists.txt  CXXTests.kdev4  README.md  main.cpp
.kdev4/: CXXTests.kdev4
